mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap.adoc
= 通过LDAP设置和管理用户

[TIP]
本页面适用于Mule管理控制台的3.3版本，我们在整个文档中将其引用为"the console"或"the Mule console"。有关在控制台的3.2.x版上启用LDAP的信息，请单击 link:/tcat-server/v/7.1.0/integrating-with-ldap[这里]。

[NOTE]
Mule管理控制台为 link:/mule-management-console/v/3.4/using-the-management-console-api[通过编程访问控制台的大部分功能]提供REST API，包括集群管理，应用程序，流和部署。您也可以使用REST API来配置 link:/mule-management-console/v/3.4/using-the-management-console-api[自动复制LDAP用户组]。

[WARNING]
轻量级目录访问协议（LDAP）是一种通过Internet协议（IP）实现分布式目录（如网络用户特权信息）的公共标准。许多可用的LDAP服务器包括免费使用的开源项目。安装，运行和配置LDAP服务器的详细信息不在本文的讨论范围之内;但是，本文提供了简单LDAP配置的示例，包括在Linux系统上安装和运行LDAP服务器的基本说明。

== 概述

您可以配置Mule控制台以利用LDAP服务器进行用户认证。在此用例中，LDAP服务器创建并管理用户，并且控制台上不存储有关用户的信息。组信息在LDAP服务器和控制台上进行管理。

下表列出了用户和组信息，指定存储和管理的位置：

[%header%autowidth.spread]
|===
|信息 |管理和存储
|用户名和密码 | LDAP数据库
|组名和组成员 | LDAP数据库
|群组名称和群组权限 |控制台
|===

必须在LDAP服务器和控制台上创建组。当控制台通过LDAP对用户进行身份验证时，它会从LDAP服务器请求用户的组信息，然后根据用户所属的组为用户分配适当的权限。

在使用LDAP时，控制台需要在LDAP服务器上验证_itself_才能访问LDAP数据库。控制台需要使用在LDAP数据库上定义的用户帐户登录。此用户帐户可以是为控制台用户设置的任何一个帐户，也可以是完全独立的帐户（不属于任何组），其唯一用途是验证控制台。

例如，您可以在名为`mmc`的LDAP数据库上创建用户，并将控制台配置为使用`mmc's`凭证连接到LDAP服务器。例如，当用户以用户`admin`身份登录控制台时，控制台首先使用`mmc's`凭据对LDAP服务器上的_itself_进行身份验证，然后将`admins's`凭据发送到LDAP服务器。如果`admin's`凭据有效，则LDAP服务器会向控制台提供`admin's`组信息。然后，控制台根据为`admin`所属的组指定的权限向`admin`授予适当的权限。

本文档的最后一部分提供了详细介绍此配置的 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[例]。

要将控制台配置为通过LDAP对用户进行身份验证，请执行以下高级任务：

*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[获取LDAP参数]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[在LDAP上设置用户和组]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[启用LDAP Spring配置文件]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[在控制台上启用LDAP]

== 获取LDAP参数

询问您的LDAP服务器管理员以获取以下信息：

*  *The LDAP host and listening port*。主机可以是IP地址或主机名。示例`192.168.1.14`在端口`389`上。
*  *Te LDAP user account credentials that the console uses to connect to LDAP*这是在LDAP服务器上配置的用户帐户，允许控制台访问存储有关控制台用户信息的数据库。示例：用户：`mmc`密码：`mmc123`。
*  *Structure of the LDAP tree that stores user and group information for console users*。此数据提供了控制台用于在LDAP内搜索用户的基本上下文和属性。 LDAP服务器管理员可以将这些值从LDAP服务器导出到名为LDIF文件（用于LDAP数据交换格式）的文本文件中。本文档中提供的 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[例]包含所示工作配置的LDIF导出（请参阅 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[通过导入LDIF文件填充LDAP数据库]）。

== 在LDAP上设置用户和组

您必须在LDAP服务器上创建所有用户。换句话说，无法通过控制台在LDAP上创建用户，因为控制台只能读取LDAP数据库，并且无法写入。

用户组必须在LDAP上创建，并在console_上创建_also。如上所述，组权限被定义并存储在控制台上。

下表列出了与用户和组相关的任务，指定它们是在LDAP服务器的控制台上执行的（或两者）。

[%header%autowidth.spread]
|===
|描述 |在控制台 |上执行在LDAP服务器上执行
|创建用户 |  | X
|设置用户密码 |  | X
|创建组 | X  | X
|将用户分配到组 |  | X
|设置组权限 | X  |
|===

您必须在LDAP数据库的同一子树下创建所有控制台用户，因为控制台将在单个基本上下文中搜索这些用户。例如，您可以在同一个组织单位下创建所有用户。在这种情况下，所有控制台用户共享相同的相对专有名称（RDN），例如`ou=people`，`dc=company`，`dc=org`。

== 启用LDAP Spring Profile

您必须在控制台上启用LDAP，以便控制台可以根据LDAP服务器对用户进行身份验证。该程序涉及两个步骤：

.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[启用LDAP Spring配置文件]
.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[创建LDAP配置文件]

这些步骤涉及以下两个文件：

*  `<Mule install path>/apps/mmc/webapps/mmc/WEB-INF/web.xml`，它指示控制台启用LDAP验证所需的LDAP弹簧配置文件。
*  `<Mule install path>/apps/mmc/webapps/mmc/WEB-INF/classes.mmc-ldap.properties`，其中包含连接到LDAP服务器以及搜索该服务器上的用户所需的信息。

== 启用LDAP Spring Profile

完成以下步骤：

. 转到以下目录：`<Mule install path>/apps/mmc/webapps/mmc/WEB-INF`
. 找到文件`web.xml`。
. 用您最喜欢的文本编辑器打开它，然后找到以下行：
+
[source, xml, linenums]
----
<param-name>spring.profiles.active</param-name>
----

. 修改下一行以包含LDAP Spring配置文件作为值：
+
[source, xml, linenums]
----
<param-value>tracking-h2,ldap</param-value>
----

== 创建LDAP配置文件

完成以下步骤：

. 导航`classpath`目录：`<Mule install path>/apps/mmc/webapps/mmc/WEB-INF/classes`
. 创建一个名为`mmc-ldap.properties`的文件。这将是LDAP配置文件。
+
[NOTE]
对于Tomcat，类路径目录是`/lib`。

. 在此配置文件中包含所有必需的参数，并将特定于您的环境的值代入下面的列表中：
+
[source, code, linenums]
----
providerURL=ldap://192.168.1.14:389/
userDn=cn=mmc,dc=company,dc=com
password=mmcadmin
usernameAttribute=uid
userSearchBaseContext=ou=people,dc=company,dc=com
userSearchFilterExpression=(uid={0})
userSearchBase=ou=people,dc=company,dc=com
userSearchAttributeKey=objectclass
userSearchAttributeValue=person
roleDn=ou=groups,dc=company,dc=com
groupSearchFilter=(member={0})
----

下表介绍了通过配置文件设置的属性：

[%header%autowidth.spread]
|===
|属性 |说明
| `providerURL`  | LDAP服务器的URL，包括监听端口
_console user_的| `userDn`  |可分辨名称（DN），即控制台用户登录LDAP服务器并访问LDAP数据库的用户。
| `password`  | _console user_的密码。这是`initialDirContextFactory` bean的密码属性。
| `usernameAttribute`  |用于覆盖`org.mule.galaxy.security.ldap.UserLdapEntryMapper`中`usernameAttribute`参数的默认值，这是ActiveDirectory配置所必需的。默认值是`uid`。
| `userSearchBaseContext`  |控制台搜索用户的LDAP树结构中的基本上下文。这是`userSearch` bean的第一个`<constructor-arg>`。
| `userSearchFilterExpression`  |用于查找LDAP数据库中与特定用户匹配的条目的过滤器表达式。例如，`(uid={0})`会查找一个条目，其`uid`属性与登录时在*Username*字段中提供给控制台的用户名相匹配。这是`userSearch` bean的第二个`<constructor-arg>`。
| `userSearchBase`  |控制台将在其中搜索用户的LDAP数据库中的基本上下文。这是`userManagerTarget` bean的（`userSearchBase`属性）。
| `userSearchAttributeKey`  |用于在LDAP服务器上搜索用户的属性。这是`userManagerTarget` bean的（`userSearchAttributes`属性）。
| `userSearchAttributeValue`  |这是用于在LDAP服务器上搜索用户的属性的值。
| `roleDn`  |上下文的DN用于搜索用户所属的组。这是`ldapAuthoritiesPopulator` bean的第二个`<constructor-arg>`。
| `groupSearchFilter`  |查找角色的过滤器表达式。例如，（`member={0}`）在`groupSearchBase`内搜索具有名为`member`的属性的组，其值包含在*Username*字段中提供给控制台的用户名登录。这是`{ldapAuthoritiesPopulator}` bean的`groupSearchFilter`属性。
|===

您可以配置用户和组搜索参数以适应包含用户条目的LDAP数据库的结构。

== 创建MMC用户组

如上所述，您只需在LDAP服务器上创建用户，并在LDAP服务器和管理控制台上创建用户组。在控制台上创建用户组有两种方法，如下所述。

=== 方法一：使用LDAP管理员组

. 在LDAP服务器上，创建一个名为`Administrators`的组
. 定义属于该组的用户。
. 在控制台上启用LDAP。
. 以属于`Administrators`组的用户身份登录控制台。控制台会自动为属于`Administrators`组的所有用户分配完整管理权限，因此您现在可以在控制台上拥有完全权限。
. 在控制台上创建其他组并为其分配所需的权限。

您可以在LDAP服务器上执行所有其他用户配置，例如从组中添加/删除用户。完成后，您可以根据需要从LDAP服务器中删除`Administrators`组。


==== 使用控制台的管理员角色设置组

假设LDAP数据库的域是*company.com*。用户存储在组织单位*people*中，组存储在组织单位*groups*中。

在LDAP服务器上：

. 创建一个用户，例如`admin`。用户的DN将为`cn=admin`，`ou=people`，`dc=company`，`dc=com`。
. 设置用户的密码
. 创建一个名为`Administrators`的组。该组的DN将为`cn=Administrators`，`ou=groups`，`dc=company`，`dc=com`。
. 将组`Administrators`的属性`member`设置为包含用户`admin`。

在控制台上：

. 停止控制台
. 在控制台上启用LDAP（请参阅说明 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[以上]）
. 重新启动控制台
. 使用在LDAP服务器上设置的密码以用户`admin`登录。

控制台将您认证为属于组`Administrators`的LDAP服务器上的用户`admin`。因此，登录后，仪表板为具有管理权限的用户提供全部功能。

image:Dashboard.jpeg[仪表板]

您现在可以创建新的组，并修改现有组的权限。为此，请点击信息中心上的*Manage Users and Permissions*，或点击*Administration*，然后点击*User Groups*。

在创建/修改组到您想要的配置后，如果需要，您可以从LDAP服务器中删除`Administrators`组。


=== 方法二：在未启用LDAP的情况下在控制台上创建组

. 在LDAP服务器上创建所有必要的用户和组。
. 启动控制台_without_ LDAP已启用。
. 登录到控制台。
. 创建与已在LDAP服务器上创建的组匹配的组。
. 为每个组分配适当的权限。
. 停止控制台。
. 在控制台上启用LDAP。
. 重新启动控制台，然后登录。

== 示例：简单的LDAP设置

此示例说明了一个简单的LDAP配置，其中LDAP服务器和控制台位于同一台计算机上。具体来说，该练习涵盖了在基于Debian的Linux系统上的LDAP服务器的安装和基本配置。要完成下面描述的步骤，您应该熟悉Linux系统上的软件安装和配置。

=== 环境

此示例是使用以下系统规范创建的：

*  O.S .: Linux（Xubuntu 12.04 LTS，基于Debian 7 "Wheezy/Sid"）。主页：http://xubuntu.org
*  LDAP服务器：OpenLDAP。主页：http://www.openldap.org
*  LDAP浏览器：Apache Directory Studio。主页：http：//directory.apache.org/studio/

本示例提供了以下任务的基本概述：

*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[下载并安装OpenLDAP服务器和实用程序]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[下载并安装Apache Directory Studio LDAP浏览器]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[配置LDAP服务器并创建数据库]
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[使用Apache Directory Studio创建LDAP用户和组]（或者 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[通过导入LDIF文件来创建用户和组]）
*  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[配置控制台以用于LDAP]

=== 下载并安装OpenLDAP服务器

====  OpenLDAP安装选项

OpenLDAP是一个免费的开源LDAP服务器，可用于许多平台，包括大多数Unix，Linux，Mac OS X和Windows。设置OpenLDAP最简单的方法是在Debian，Suse，Red Hat等Linux发行版中安装相应的软件包。

OpenLDAP项目仅以源格式分发软件，可以获得 http://www.openldap.org/software/download/[这里]。请务必查看FAQ http://www.openldap.org/faq/data/cache/1.html[这里]。

此外，还有几个第三方预打包版本可供下载。

==== 在基于Debian的Linux发行版上安装

OpenLDAP服务器和客户端程序分别位于不同的软件包中，分别称为`slapd`和`ldap-utils`。 `ldap-utils`包中包含客户端实用程序，例如`ldapadd`和`ldapmodify`，它们允许您通过命令行读取和管理LDAP数据库。

要安装这两个软件包，请以root用户身份运行以下命令：

[source, code, linenums]
----
apt-get install slapd ldap-utils
----



[TIP]
====
*Running commands as root on some Debian-based systems*：

在一些基于Debian的系统上，例如Ubuntu或其衍生产品，通常以root身份运行命令的过程是发出：`sudo <command>`

或者，您可以通过运行（作为在`/etc/sudoers`文件中正确授权的用户）以下命令`sudo su -`
====

安装OpenLDAP的另一种方式是使用软件包管理器，例如`synaptic`，该软件为系统的软件包数据库提供图形界面`synaptic`通常默认安装，并可在系统菜单{{2 }}。在`synaptic`中，选择软件包`slapd`和`ldap-utils`，然后应用更改。

=== 下载并安装Apache Directory Studio LDAP浏览器

Apache Directory Studio是一个免费且开源的基于Eclipse的LDAP浏览器和客户端，可与任何LDAP服务器一起使用。它适用于Mac OS X，Linux和Windows。它可以直接从项目的 http://directory.apache.org/studio/[主页]下载。来源可在 http://directory.apache.org/studio/downloads.html[下载页面]中找到。

安装Apache Directory Studio非常简单 - 只需解压并解压安装文件并运行程序二进制文件。

[TIP]
====

*Uncompressing and unpacking gzipped tar files*：

Linux的Apache Studio安装程序文件是gzipped tar文件（.tar.gz）。大多数Linux文件管理器（例如`Nautilus`或`Thunar`）提供了一种使用图形界面解压缩和解压这些文件的方法，通常通过右键单击文件并选择*Open with Archive Manager*或类似的选项。要在命令行上解压缩并解压缩文件，请导航至下载文件的目录，然后运行以下命令：`tar zxvf <file>`
====

=== 网络配置

对于这个例子，我们在本地机器的默认端口上运行OpenLDAP服务器。

LDAP主机：`127.0.0.1`
LDAP端口：`389`

=== 配置LDAP服务器

OpenLDAP服务器作为名为`slapd`的守护程序运行。安装分发包后，守护进程会自动启动，其默认配置是从`/etc/slapd.d`目录读取的。

在本例中，我们修改`slapd's`配置以从系统级LDAP配置文件`/etc/ldap/ldap.conf`中读取其参数。然后，我们修改此文件以包含包含LDAP用户的数据库的定义。这包括四个步骤：

.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[停止slapd守护进程]
.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[修改slapd的默认参数文件`/ etc / default / slapd`]
.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[修改系统范围的LDAP配置文件`/ etc / ldap / ldap.conf`]
.  link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[重新启动slapd守护进程]

==== 停止slapd守护进程

要验证`slapd`守护进程正在运行，请打开终端并发出以下命令：`ps aux | grep slapd`

如果守护进程正在运行，那么该命令将返回如下所示的内容：

[source, code, linenums]
----
openldap  1172  0.0  0.1 256916  4840 ?        Ssl  11:39   0:00 /usr/sbin/slapd -h ldap:/// ldapi:/// -g openldap -u openldap -F /etc/ldap/slapd.d
----

出现上述情况时，通过以root身份`service slapd stop`发出以下命令来停止守护进程

最后，通过重新发布`ps aux`命令来验证已被有效停止。

==== 修改slapd的默认参数文件

[TIP]
当您修改配置文件时，您应该备份原始文件。例如，在同一目录中创建名为`<file>.bak`或`<file>.orig`的副本。

停止`slapd`守护进程后，使用文本编辑器打开文件`/etc/default/slapd`。查找并替换以下条目，如下所示：

. 找到以`SLAPD_CONF`开头的行并重新写入：`SLAPD_CONF=/etc/ldap/ldap.conf`。这会告知守护程序从系统范围的LDAP配置文件`/etc/ldap/ldap.conf`中读取其配置，我们将在以下步骤中对其进行修改。

. 找到以`SLAPD_PIDFILE`开头的行，并将其重写为：`SLAPD_PIDFILE=/var/run/slapd.pid`这会告知守护进程将其进程标识号（PID）写入文件{{ 3}}。如果没有这个设置，守护进程将不会启动。

找到以`SLAPD_SERVICES`开头的行，然后重新写入：`SLAPD_SERVICES="ldap://0.0.0.0:389/"`。这指示守护程序在所有网络接口上的端口389（默认端口）上侦听。

==== 修改系统范围的LDAP配置文件

. 备份文件`/etc/ldap/ldap.conf`的内容。
. 将文件的内容替换为下面列出的内容。 （您需要用您自己的密码或哈希替换`rootpw`字段的内容。）
+
[source, code, linenums]
----
#
# LDAP Defaults
#
 
# See ldap.conf(5) for details
# This file should be world readable but not world writable.
 
loglevel 256
 
include /etc/ldap/schema/core.schema
include /etc/ldap/schema/cosine.schema
include /etc/ldap/schema/inetorgperson.schema
include /etc/ldap/schema/openldap.schema
include /etc/ldap/schema/misc.schema
include /etc/ldap/schema/collective.schema
include /etc/ldap/schema/dyngroup.schema
 
modulepath /usr/lib/ldap
moduleload back_bdb.la
 
database bdb
suffix "dc=company,dc=com"
rootdn "cn=Manager,dc=company,dc=com"
rootpw {MD5}n2Hfn6TPhHfYzebqdqm1XA==
----

这是一个只有一个数据库的基本配置文件，我们已经为这个例子设置了这个数据库。

下表介绍了LDAP配置文件参数。

[%header%autowidth.spread]
|===
|项 |说明
| `loglevel`  |指定记录详细信息。级别256记录连接，操作和结果统计。在此系统上，默认情况下`slapd`会记录到`/var/log/syslog`。
| `modulepath`  |指定搜索可加载模块的目录列表。
| `moduleload`  |指定要加载的模块的名称，在本例中为加载伯克利数据库的`bdb`模块。
| `database`  |从数据库类型开始标记新数据库实例定义的开始。
| `suffix`  |将传递给数据库的所有查询的DN后缀。
| `rootdn`  |数据库的根用户的DN。该用户具有对数据库的完全读写访问权限。在这个例子中，我们雇用用户为控制台用户创建条目。控制台本身只需要`read access`到数据库。它可以以不同的用户身份登录到LDAP。
| `rootpw`  |数据库root用户的密码。在这种情况下，该文件存储密码的MD5散列。密码可以以明文形式存储，但由于此配置文件具有世界可读性，因此存在安全风险。密码哈希可以使用`slappasswd`命令生成，如下所述。
|===

[TIP]
====
*How to generate a hash for the database root user password (optional)*

如 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[以上]所示，LDAP配置文件存储数据库根用户的用户名和密码。密码可以以明文保存;然而，这构成安全风险，因为LDAP配置文件是世界可读的。要为密码生成散列，请运行以下命令：`slappasswd -h <scheme> -s <secret>`

`<scheme>`是RFC 2307方案，如`{MD5}`，`{CRYPT}`或`{SSHA}`（默认），`<secret>`是散列的秘密。如果不带参数调用，则该命令将提示输入密码并输出结果`{SSHA}`哈希值。

此命令的输出应与以下内容类似：`{MD5}Xr4ilOzQ4PCOq3aQ0qbuaQ==`

可以将此输出复制粘贴到`rootpw`字段的LDAP配置文件中
====


==== 测试LDAP服务器

要测试LDAP服务器，请打开与服务器的连接并执行搜索。为此，请发出以下命令：

[source, code, linenums]
----
ldapsearch -x -b '' -s base '(objectclass=*)' namingContexts
----

对于这个例子，该命令应该返回以下输出：

[source, code, linenums]
----
# extended LDIF
#
# LDAPv3
# base <> with scope baseObject
# filter: (objectclass=*)
# requesting: namingContexts
#
 
#
dn:
namingContexts: dc=company,dc=com
 
# search result
search: 2
result: 0 Success
 
# numResponses: 2
# numEntries: 1
----

==== 创建LDAP数据库条目

此时，LDAP服务器正在运行并创建了一个空的数据库。我们通过创建数据库root用户来填充数据库，这对于使用Apache Studio进行登录和使用其图形界面添加数据库条目是必需的。

使用以下文本创建一个文本文件：

[source, code, linenums]
----
dn: dc=company,dc=com
objectclass: dcObject
objectclass: organization
o: My Company
dc: company
 
dn: cn=Manager,dc=company,dc=com
objectclass: organizationalRole
cn: Manager
----

[IMPORTANT]
使用LDIF文件时，检查间距非常重要。确保在条目之间只留下一条空白行（并且空白行中没有空格或制表符），并且在任何文本行的开头或末尾没有空格或制表符。

现在，使用以下命令创建初始数据库条目：

[source, code, linenums]
----
ldapadd -x -D "cn=Manager,dc=company,dc=com" -W -f <file>
----

该命令将提示您输入root用户的密码。输入您在系统范围的LDAP配置文件中设置的密码。

该命令应该返回以下输出：

[source, code, linenums]
----
Enter LDAP Password:
adding new entry "dc=company,dc=com"
 
adding new entry "cn=Manager,dc=company,dc=com"
----

此时，已定义了DN `"n=Manager,dc=company,dc=com"`的数据库root用户。

我们使用此用户登录以填充数据库。

==== 填充LDAP数据库

有两种填充LDAP数据库的方法：通过图形用户界面手动定义每个数据库对象，或者使用数据库对象定义编写LDIF文件，然后将文件导入到LDAP中。这个例子描述了两种方法

link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[使用GUI填充LDAP数据库（Apache Studio）]
link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[通过导入LDIF文件填充LDAP数据库]

==== 使用GUI填充LDAP数据库（Apache Studio）

===== 启动Apache Studio

导航到解压缩Apache Studio gzipped tar文件的目录。打开一个终端窗口并输入：

[source, code, linenums]
----
cd <Apache Studio directory>
----

例如：

[source, code, linenums]
----
cd ApacheDirectoryStudio-linux-x86_64-1.5.3.v20100330/
----

[TIP]
使用终端时，按Tab键通常会自动完成文件夹和文件名称。

一旦进入目录，发出以下命令：

[source, code, linenums]
----
./ApacheDirectoryStudio
----

出现Apache Studio的欢迎屏幕（通常为空白屏幕）。

为了开始填充数据库，您必须首先创建一个到数据库的连接，完成以下步骤：

. 打开*LDAP*菜单，然后点击*New Connection*。弹出*Network Parameter*窗口。
+
image:1-conn.parameters.png[1-conn.parameters]

. 填写必填字段：

*  *Connection name*：指定任何有意义的名称。对于这个例子，我们使用`local`。
*  *Hostname*：LDAP服务器的主机名或IP地址。在本例中，它位于本地主机`127.0.0.1`上。
*  *Port*：在此示例中，端口`389`（默认为LDAP）。
*  *Encryption method*：`No encryption`

. 要测试连接，请点击*Check Network Parameter*，然后点击*Next*。
+
[TIP]
====
如果在尝试与其他主机上的LDAP服务器建立连接时遇到连接问题，请运行以下命令发出telnet命令以移植LDAP主机上的`389`：`telnet <host> <port>`。

例如：

[source, code, linenums]
----
telnet 192.168.1.14 389
----

如果连接成功，则输出应类似于以下内容：

[source, code, linenums]
----
syrah:~$ telnet 127.0.0.1 389
Trying 127.0.0.1...
Connected to 127.0.0.1.
Escape character is '^]'.
----

另一方面，`Connection refused`错误表示没有任何内容正在侦听指定的端口。其他任何结果都可能表示网络问题，例如您的计算机与LDAP主机之间的防火墙。
====

设置完网络参数后，向导会将您带到*Authentication*窗口：

image:2-auth_user.png[2- AUTH_USER]

输入所需信息：

*Authentication Method*：`Simple authentication`
*Bind DN or user*：数据库的根用户，如LDAP配置文件中所定义的，并使用上述的LDIF导入来创建。在这种情况下*cn=Manager, dc=company, dc=com*。
*Bind password*：LDAP配置文件中定义的数据库root用户的密码。

点击*Check Authentication*验证验证，然后点击*Finish*。

Apache Directory Studio现在已连接到LDAP服务器。 *LDAP Browser*窗格显示名为*DIT*的顶级条目（目录信息树）。点击*DIT*旁边的箭头展开数据库的内容。此时，数据库只包含一个对象：root用户Manager。

image:4-initial_DB_objects.png[4- initial_DB_objects]

===== 创建组织单位

我们创建两个组织单位（ou）：*groups*，用于存储组定义;和*people*，用于存储用户定义。

. 在*LDAP Browser*窗格中，右键单击数据库的域条目*dc=company,dc=com*。
. 在弹出式菜单上，点击*New*，然后选择*New Entry*。
. 在*Entry Creation Method*窗口中，点击*Create entry from scratch*，然后点击*Next*。该向导将带您进入*Object Classes*窗口：
+
image:5-create_obj_wizard-ob_classes.png[5- create_obj_wizard-ob_classes]

. 在*Available object classes*输入框中，开始输入*OrganizationalUnit*。搜索框会自动选择与您的搜索相匹配的可用对象。
+
image:6-create_obj_wizard-ob_classes.png[6- create_obj_wizard-ob_classes]

. 点击*OrganizationalUnit*。
. 点击*Add*，然后点击*Next*。下一个窗口是*Distinguished Name*窗口：
+
image:7-create_obj_wizard-DN.png[7- create_obj_wizard-DN]

. 在*RDN*字段中输入*ou*，然后按*Enter*。
. 在*=*字段中输入*groups*。当您这样做时，*DN Preview*窗口会自动填入您创建条目的*Distinguished Name*，在这种情况下为`ou=groups`，`dc=company`，`dc=com`。
. 点击*Next*。该向导将带您进入*Attributes*弹出窗口：
+
image:8-create_obj_wizard-attrs.png[8 create_obj_wizard-ATTRS]
+
该窗口显示刚刚创建的对象的属性列表。

. 点击*Finish*将更改写入LDAP数据库。将创建一个名为`groups`，类型为DN `ou=groups`，`dc=company`，`dc=com`的OrganizationalUnit对象，并显示在*LDAP Browser*窗格中。

重复上述过程，创建一个名为*people*的新OrganiationalUnit对象。

===== 创建用户

此时，LDAP数据库包含根用户以及两个名为`groups`和`people`的空白组织单位。我们接下来为三个用户创建条目，全部在`people`组织单位下。

[%header%autowidth.spread]
|===
|用户 |此配置中的用户功能
| mmc  |允许控制台在LDAP上验证_itself_，以获得对数据库的读取访问权限。该用户的凭证存储在控制台的LDAP配置文件`mmc-ldap.properties`中。
| admin  |这是一个控制台用户。它将成为`Administrators`组的成员，并在控制台上拥有完整的管理权限。
| testuser1  |这是一个具有有限权限的控制台用户，为此示例创建。
|===

创建用户的过程与创建组的过程相同。当然，值（对象类型和属性）不同。

. 右键单击LDAP树中的*ou=people*条目，选择*New*，然后选择*New Entry*。
. 在*Object Classes*窗口中，选择*inetOrgPerson*，然后点击*Next*。
. 在*Distinguished Name*窗口的*RDN*字段中键入`cn`，然后按*Enter*。
. 在*=*字段中输入`mmc`。当您这样做时，*DN Preview*窗口应该自动填入您创建的条目的*Distinguished Name*，在这种情况下`cn=mmc,ou=people,dc-company,dc=com`。
. 按*Next*。
. 当*Attributes*窗口提示您为*sn*字段指定值时，右键单击*sn*字段，然后选择*Edit Value*。键入*mmc*，然后点击*Finish*。

已使用以下属性创建`mmc`用户：

*  objectClass：`inetOrgPerson`
*  objectClass：`organizationalPerson`
*  objectClass：`person`
*  objectClass：`top`
*  cn：`mmc`
*  sn：`mmc`

您必须添加两个属性：

uid：`mmc`
userPassword：`mmc123`

. 要添加这些属性，请点击*New Attribute*图标（如下突出显示）。
+
image:9-create_obj_wizard-user_attrs.png[9- create_obj_wizard-user_attrs]

. 在*Attribute Type*窗口输入框中，键入`uid`（或者通过单击输入框右侧的箭头从下拉菜单中选择*uid*）。
. 点击*Next*，然后点击*Finish*。
. 输入*mmc*，然后按*Enter*。
. 再次点击*New Attribute*图标，然后输入或选择*userPassword*。
. 点击*Next*。
. 在*Options*窗口中，点击*Finish*。
+
image:10-create_obj_wizard-user_pass.png[10 create_obj_wizard-user_pass]

. 提示输入新密码时，请键入*mmc123*（或您选择的另一个密码;您必须在控制台的`mmc-ldap.properties`文件中指定相同的密码） }字段。
. 在*Select Hash Method*菜单中，选择*Plaintext*，然后点击*OK*。

用户`mmc`现在已被定义为将在此示例配置中使用的所有属性。

重复上述步骤创建用户*admin*和*testuser1*，并指定您选择的密码。这些密码将在登录控制台时由用户输入。

===== 创建和定义管理员组

. 在*LDAP Browser*窗格上，右键单击目录树中的*ou=groups*条目。
. 选择*New*，然后选择*New Entry*。
. 按照创建组织单位和用户的相同步骤，使用以下属性定义条目：

**  objectClass：`groupOfNames`
**  cn：`Administrators`
**  `member`：`admin,ou=people,dc=company,dc=com`

在定义了*cn*属性之后，对象创建向导将提示您为*member*属性输入一个值。这是DN或属于`Administrator`组的用户。您可以键入用户的DN（请参阅上文），也可以点击*Browse*从数据库中选择用户：

image:11-create_obj_wizard-groupmember.png[11-create_obj_wizard-groupmember]

如您所见，组成员资格不会与用户定义一起存储，而是与用户所属组的定义一起存储。如果您希望多个用户属于该组，请使用*New Attribute*图标（参见上文）向该组添加更多属性，并完成以下步骤：

. 选择*member*作为属性类型。
. 选择将成为该组成员的其他用户。

当用户登录到控制台时，控制台首先要求LDAP服务器验证用户名和密码，然后请求该用户所属的组的列表。此搜索的参数在`mmc-ldap.properties`文件的以下行中定义：

[source, code, linenums]
----
groupSearchFilter=(member={0})
----

===== 创建和定义测试用户和组

按照上述步骤，创建名为*`testuser1`*的用户和名为*testgroup*的组，并将`testuser1`作为组的成员。

===== 为LDAP配置控制台

按照 link:/mule-management-console/v/3.4/setting-up-and-managing-users-via-ldap[以上]中列出的步骤在控制台上启用LDAP。在本例中，`mmc-ldap.properties`文件的内容如下所示：

[source, code, linenums]
----
providerURL=ldap://127.0.0.1:389/
userDn=cn=mmc,ou=people,dc=company,dc=com
password=mmc123
userSearchBaseContext=ou=people,dc=company,dc=com
userSearchFilterExpression=(uid={0})
userSearchBase=ou=people,dc=company,dc=com
userSearchAttributeKey=objectclass
userSearchAttributeValue=person
roleDn=ou=groups,dc=company,dc=com
groupSearchFilter=(member={0})
----

===== 测试控制台登录

启动控制台并以用户*admin*登录，使用在创建用户时在LDAP中设置的密码。由于用户管理员是管理员组的成员，因此控制台已为用户提供了该组的完整管理权限的默认设置。登录时，控制台将显示仪表板，该仪表板为组成员提供全部功能。

登录到控制台后，验证控制台是否已正确读取LDAP服务器中的所有用户。为此，请点击*Administration*。您应该看到在LDAP数据库上创建的所有用户的列表，在这种情况下，`mmc`，`admin`和`testuser1`。

image:12-mmc-userlist.png[12-MMC-用户列表]

创建一个名为*testgroup*的组：

. 导航至屏幕左侧的*Manage*窗格。
. 点击*User Groups*。
. 点击屏幕右侧的*New*，然后输入：
** 组*Name*
**  *Description*（如果需要）
** 设置权限。

对于此测试组，请设置以下权限：

*Applications - View*
*Deployments - View*
*Flows - View*
*Tracking - View*
*Files - View*
*Servers - View*

*Server Group Permissions: All*

从控制台注销，然后以*testuser1*身份登录。控制台显示仪表板，但限制的选项与组`testgroup`的有限权限匹配：

image:13-mmc-limited_dashboard.png[13-MMC-limited_dashboard]

===== 从哪里开始

您可以在LDAP上创建新用户和组，并将成员分配给组。然后，在控制台上为每个组设置所需的权限。如果需要，您可以从LDAP中删除`Administrators`组。

[WARNING]
修改LDAP数据库后，重新启动控制台以允许其重新读取LDAP数据库的内容。

==== 填充LDAP数据库的替代方法：导入LDIF文件

要在LDAP中自动创建数据库对象，首先要在LDIF文件中定义对象，然后使用`ldapadd`命令将文件导入到LDAP中。

以下您将找到本示例中创建的所有数据库用户和组对象的LDIF文件。如果您希望自动将此用户和组配置复制到LDAP数据库中，请将以下代码复制粘贴到纯文本文件中，然后使用以下命令导入文件：

[source, code, linenums]
----
ldapadd -x -D "cn=Manager,dc=company,dc=com" -W -f <file>
----

您可能希望在导入前修改`userPassword`值。

LDIF文件内容：

[source, code, linenums]
----
dn: ou=groups,dc=company,dc=com
objectClass: organizationalUnit
objectClass: top
ou: groups
 
dn: ou=people,dc=company,dc=com
objectClass: organizationalUnit
objectClass: top
ou: people
 
dn: cn=Administrators,ou=groups,dc=company,dc=com
objectClass: groupOfNames
objectClass: top
cn: Administrators
member: cn=admin,ou=people,dc=company,dc=com
 
dn: cn=admin,ou=people,dc=company,dc=com
objectClass: inetOrgPerson
objectClass: organizationalPerson
objectClass: person
objectClass: top
cn: admin
sn: admin
uid: admin
userPassword: mmcadmin
 
dn: cn=Developers,ou=groups,dc=company,dc=com
objectClass: groupOfNames
objectClass: top
cn: Developers
member: cn=admin,ou=people,dc=company,dc=com
 
dn: cn=testuser1,ou=people,dc=company,dc=com
objectClass: inetOrgPerson
objectClass: organizationalPerson
objectClass: person
objectClass: top
cn: testuser1
sn: testuser1
uid: testuser1
userPassword: testuser1123
 
dn: cn=testgroup,ou=groups,dc=company,dc=com
objectClass: groupOfNames
objectClass: top
cn: testgroup
member: cn=testuser1,ou=people,dc=company,dc=com
 
dn: cn=mmc,ou=people,dc=company,dc=com
objectClass: inetOrgPerson
objectClass: organizationalPerson
objectClass: person
objectClass: top
cn: mmc
sn: mmc
uid: mmc
userPassword: mmc123
----

====  LDAP事件的基本记录

默认情况下，LDAP服务器将事件记录到`/var/log/syslog`。如果出现身份验证问题，请查看此日志以了解详细信息

以下是日志的摘录，显示了当用户登录到控制台时由slapd记录的事件。有两个BIND操作（用户认证）到LDAP服务器;第一次出现在控制台启动并验证自身时（请参阅下面摘录中的第二行和第三行）。在建立用于搜索的上下文基础之后，LDAP搜索`user admin`，对用户进行身份验证，然后搜索用户所属的组。

[source, code, linenums]
----
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 fd=15 ACCEPT from IP=127.0.0.1:34467 (IP=0.0.0.0:389)
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=0 BIND dn="cn=mmc,ou=people,dc=company,dc=com" method=128
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=0 BIND dn="cn=mmc,ou=people,dc=company,dc=com" mech=SIMPLE ssf=0
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=0 RESULT tag=97 err=0 text=
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=1 SRCH base="ou=people,dc=company,dc=com" scope=2 deref=3 filter="(uid=admin)"
Jun  6 17:02:21 syrah slapd[1099]: <= bdb_equality_candidates: (objectClass) not indexed
Jun  6 17:02:21 syrah slapd[1099]: <= bdb_equality_candidates: (uid) not indexed
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=1 SEARCH RESULT tag=101 err=0 nentries=1 text=
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 fd=16 ACCEPT from IP=127.0.0.1:34468 (IP=0.0.0.0:389)
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=0 BIND dn="cn=admin,ou=people,dc=company,dc=com" method=128
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=0 BIND dn="cn=admin,ou=people,dc=company,dc=com" mech=SIMPLE ssf=0
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=0 RESULT tag=97 err=0 text=
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=1 SRCH base="cn=admin,ou=people,dc=company,dc=com" scope=0 deref=3 filter="(objectClass=*)"
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=1 SEARCH RESULT tag=101 err=0 nentries=1 text=
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 op=2 UNBIND
Jun  6 17:02:21 syrah slapd[1099]: conn=1008 fd=16 closed
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=2 SRCH base="ou=groups,dc=company,dc=com" scope=2 deref=3 filter="(member=cn=admin,ou=people,dc=company,dc=com)"
Jun  6 17:02:21 syrah slapd[1099]: conn=1007 op=2 SRCH attr=cn objectClass javaSerializedData javaClassName javaFactory javaCodeBase javaReferenceAddress javaClassNames javaRemoteLocation
----
